@@ -16,103 +16,111 @@ use SPVM 'TestCase::Sys::Socket';
 
 my $localhost = "127.0.0.1";
 
-sub search_available_port {
-  my $retry_port = 20000;
+{
+  package TestUtil::Socket;
+  use Socket;
+  use IO::Socket;
+  use IO::Socket::INET;
   
-  my $port;
-  my $retry_max = 10;
-  my $retry_count = 0;
-  while (1) {
-    if ($retry_count > 0) {
-      warn "[Test Output]Perform the ${retry_count} retry to search an available port $retry_port";
+  my $localhost = "127.0.0.1";
+  sub search_available_port {
+    my $retry_port = 20000;
+    
+    my $port;
+    my $retry_max = 10;
+    my $retry_count = 0;
+    while (1) {
+      if ($retry_count > 0) {
+        warn "[Test Output]Perform the ${retry_count} retry to search an available port $retry_port";
+      }
+      
+      if ($retry_count > $retry_max) {
+        die "Can't find an available port";
+      }
+      
+      my $server_socket = IO::Socket::INET->new(
+        PeerAddr => $localhost,
+        PeerPort => $port,
+        Timeout => 5,
+      );
+      
+      unless ($server_socket) {
+        $port = $retry_port;
+        last;
+      }
+
+      $retry_port++;
+      $retry_count++;
     }
     
-    if ($retry_count > $retry_max) {
-      die "Can't find an available port";
+    return $port;
+  }
+
+  sub wait_port_prepared {
+    my ($port) = @_;
+    
+    my $max_wait = 3;
+    my $wait_time = 0.1;
+    my $wait_total = 0;
+    while (1) {
+      if ($wait_total > $max_wait) {
+        last;
+      }
+      
+      sleep $wait_time;
+      
+      my $sock = IO::Socket::INET->new(
+        Proto    => 'tcp',
+        PeerAddr => $localhost,
+        PeerPort => $port,
+      );
+      
+      if ($sock) {
+        last;
+      }
+      $wait_total += $wait_time;
+      $wait_time *= 2;
     }
+  }
+
+  # Starts a echo server
+  # if "\0" is sent, the server will stop.
+  sub start_echo_server {
+    my ($port) = @_;
     
     my $server_socket = IO::Socket::INET->new(
-      PeerAddr => $localhost,
-      PeerPort => $port,
-      Timeout => 5,
+      LocalAddr => $localhost,
+      LocalPort => $port,
+      Listen    => SOMAXCONN,
+      Proto     => 'tcp',
+      Reuse => 1,
     );
-    
     unless ($server_socket) {
-      $port = $retry_port;
-      last;
-    }
-
-    $retry_port++;
-    $retry_count++;
-  }
-  
-  return $port;
-}
-
-sub wait_port_prepared {
-  my ($port) = @_;
-  
-  my $max_wait = 3;
-  my $wait_time = 0.1;
-  my $wait_total = 0;
-  while (1) {
-    if ($wait_total > $max_wait) {
-      last;
+      die "Can't create a server socket:$@";
     }
     
-    sleep $wait_time;
-    
-    my $sock = IO::Socket::INET->new(
-      Proto    => 'tcp',
-      PeerAddr => $localhost,
-      PeerPort => $port,
-    );
-    
-    if ($sock) {
-      last;
-    }
-    $wait_total += $wait_time;
-    $wait_time *= 2;
-  }
-}
-
-# Starts a echo server
-# if "\0" is sent, the server will stop.
-sub start_echo_server {
-  my ($port) = @_;
-  
-  my $server_socket = IO::Socket::INET->new(
-    LocalAddr => $localhost,
-    LocalPort => $port,
-    Listen    => SOMAXCONN,
-    Proto     => 'tcp',
-    Reuse => 1,
-  );
-  unless ($server_socket) {
-    die "Can't create a server socket:$@";
-  }
-  
-  my $server_close;
-  while (1) {
-    my $client_socket = $server_socket->accept;
-    
-    $client_socket->autoflush(1);
-    
-    my $data;
-    while ($data = <$client_socket>) {
-      print $client_socket $data;
+    my $server_close;
+    while (1) {
+      my $client_socket = $server_socket->accept;
+      
+      $client_socket->autoflush(1);
+      
+      my $data;
+      while ($data = <$client_socket>) {
+        print $client_socket $data;
+      }
     }
   }
-}
 
-sub kill_term_and_wait {
-  my ($process_id) = @_;
-  
-  kill 'TERM', $process_id;
-  
-  # On Windows, waitpid never return. I don't understan yet this reason(maybe IO blocking).
-  unless ($^O eq 'MSWin32') {
-    waitpid $process_id, 0;
+  sub kill_term_and_wait {
+    my ($process_id) = @_;
+    
+    kill 'TERM', $process_id;
+    
+    # On Windows, waitpid never return. I don't understan yet this reason(maybe IO blocking).
+    unless ($^O eq 'MSWin32') {
+      waitpid $process_id, 0;
+    }
   }
 }
 
@@ -120,7 +128,7 @@ sub kill_term_and_wait {
 my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
 
 # Port
-my $port = &search_available_port;
+my $port = TestUtil::Socket::search_available_port;
 
 # The constant values
 {
@@ -175,14 +183,14 @@ ok(SPVM::TestCase::Sys::Socket->socket);
 
   # Child
   if ($process_id == 0) {
-    &start_echo_server($port);
+    TestUtil::Socket::start_echo_server($port);
   }
   else {
-    &wait_port_prepared($port);
+    TestUtil::Socket::wait_port_prepared($port);
     
     ok(SPVM::TestCase::Sys::Socket->connect($port));
     
-    kill_term_and_wait $process_id;
+    TestUtil::Socket::kill_term_and_wait($process_id);
   }
 }
 
@@ -192,14 +200,14 @@ ok(SPVM::TestCase::Sys::Socket->socket);
 
   # Child
   if ($process_id == 0) {
-    &start_echo_server($port);
+    TestUtil::Socket::start_echo_server($port);
   }
   else {
-    &wait_port_prepared($port);
+    TestUtil::Socket::wait_port_prepared($port);
     
     ok(SPVM::TestCase::Sys::Socket->close($port));
     
-    kill_term_and_wait $process_id;
+    TestUtil::Socket::kill_term_and_wait($process_id);
   }
 }
 
@@ -209,14 +217,14 @@ ok(SPVM::TestCase::Sys::Socket->socket);
 
   # Child
   if ($process_id == 0) {
-    &start_echo_server($port);
+    TestUtil::Socket::start_echo_server($port);
   }
   else {
-    &wait_port_prepared($port);
+    TestUtil::Socket::wait_port_prepared($port);
     
     ok(SPVM::TestCase::Sys::Socket->shutdown($port));
     
-    kill_term_and_wait $process_id;
+    TestUtil::Socket::kill_term_and_wait($process_id);
   }
 }
 
@@ -227,14 +235,14 @@ ok(SPVM::TestCase::Sys::Socket->socket);
 
   # Child
   if ($process_id == 0) {
-    &start_echo_server($port);
+    TestUtil::Socket::start_echo_server($port);
   }
   else {
-    &wait_port_prepared($port);
+    TestUtil::Socket::wait_port_prepared($port);
     
     ok(SPVM::TestCase::Sys::Socket->send_and_recv($port));
     
-    kill_term_and_wait $process_id;
+    TestUtil::Socket::kill_term_and_wait($process_id);
   }
 }
 
@@ -252,7 +260,7 @@ unless ($^O eq 'MSWin32') {
     SPVM::TestCase::Sys::Socket->start_echo_server($port);
   }
   else {
-    &wait_port_prepared($port);
+    TestUtil::Socket::wait_port_prepared($port);
     
     my $sock = IO::Socket::INET->new(
       Proto    => 'tcp',
@@ -275,7 +283,7 @@ unless ($^O eq 'MSWin32') {
     
     $sock->close;
     
-    kill_term_and_wait $process_id;
+    TestUtil::Socket::kill_term_and_wait($process_id);
   }
 }
 
@@ -285,14 +293,14 @@ unless ($^O eq 'MSWin32') {
 
   # Child
   if ($process_id == 0) {
-    &start_echo_server($port);
+    TestUtil::Socket::start_echo_server($port);
   }
   else {
-    &wait_port_prepared($port);
+    TestUtil::Socket::wait_port_prepared($port);
     
     ok(SPVM::TestCase::Sys::Socket->getpeername($port));
     
-    kill_term_and_wait $process_id;
+    TestUtil::Socket::kill_term_and_wait($process_id);
   }
 }
 
@@ -302,14 +310,14 @@ unless ($^O eq 'MSWin32') {
 
   # Child
   if ($process_id == 0) {
-    &start_echo_server($port);
+    TestUtil::Socket::start_echo_server($port);
   }
   else {
-    &wait_port_prepared($port);
+    TestUtil::Socket::wait_port_prepared($port);
     
     ok(SPVM::TestCase::Sys::Socket->getsockname($port));
     
-    kill_term_and_wait $process_id;
+    TestUtil::Socket::kill_term_and_wait($process_id);
   }
 }
 
