@@ -1,6 +1,7 @@
 0.14 2022-10-19
   [Test Improvement]
     * Added the TestUtil::Scope::Guard class for socket tests and use it.
+    * Add the TestUtil::Socket module for the tests of socket.
   [Test Fix]
     * Fixed the logic of searching an available port in Sys_Socket.t
 0.13 2022-10-19
